--- a/basediproject/build.gradle
+++ b/basediproject/build.gradle
@@ -40,12 +40,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //Material design
-    api 'com.google.android.material:material:1.0.0'
+    api 'com.google.android.material:material:1.1.0-alpha09'
 
     api "android.arch.lifecycle:extensions:2.0.0"
 
     //RxJava
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.1'
 
     //Media Picker
@@ -62,9 +62,9 @@ dependencies {
     api 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     api 'com.squareup.retrofit2:converter-gson:2.4.0'
     api 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     api 'com.squareup.okhttp3:okhttp:3.12.1'
-    api 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    api 'com.squareup.okhttp3:logging-interceptor:3.12.1'
 
     //KotPref
 //    api 'com.chibatching.kotpref:kotpref:2.8.0'
