--- a/basediproject/build.gradle
+++ b/basediproject/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //Material design
-    api 'com.google.android.material:material:1.1.0-alpha09'
+    api 'com.google.android.material:material:1.0.0'
 
     api "android.arch.lifecycle:extensions:2.0.0"
 
