--- a/basediproject/src/main/AndroidManifest.xml
+++ b/basediproject/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
             android:name=".utils.imageviewer.ImagePreviewActivity"
             android:screenOrientation="portrait"
             android:theme="@style/ImagePreviewFullScreen" />
+
+        <activity
+            android:name=".utils.filepicker.FilePickerActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
