--- a/basediproject/build.gradle
+++ b/basediproject/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -33,15 +33,16 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta3"
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0"
+    //noinspection GradleDependency
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //Material design
-    api 'com.google.android.material:material:1.0.0'
+    api 'com.google.android.material:material:1.2.0'
 
     api "android.arch.lifecycle:extensions:2.0.0"
 
@@ -59,20 +60,20 @@ dependencies {
     api 'com.github.chrisbanes:PhotoView:2.3.0'
 
     //Retrofit
-    api 'com.squareup.retrofit2:retrofit:2.4.0'
+    api 'com.squareup.retrofit2:retrofit:2.8.1'
     api 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    api 'com.squareup.retrofit2:converter-gson:2.4.0'
+    api 'com.squareup.retrofit2:converter-gson:2.8.1'
     api 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    api 'com.squareup.okhttp3:okhttp:3.12.1'
-    api 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+    api 'com.squareup.okhttp3:okhttp:4.6.0'
+    api 'com.squareup.okhttp3:logging-interceptor:4.6.0'
 
     //Loging
     api 'com.jakewharton.timber:timber:4.7.1'
 
     //Dagger
-    api 'com.google.dagger:dagger:2.23'
-    api 'com.google.dagger:dagger-android:2.23' //dagger-android
+    api 'com.google.dagger:dagger:2.27'
+    api 'com.google.dagger:dagger-android:2.26' //dagger-android
     api "com.google.dagger:dagger-android-support:2.23" //DaggerAppCompat dagger-android
 
     kapt 'com.google.dagger:dagger-compiler:2.23'
@@ -86,5 +87,5 @@ dependencies {
     api 'com.github.bhoomit11:ValidationHelper:1.0.2'
 
     //Glide
-    api 'com.github.bumptech.glide:glide:4.9.0'
+    api 'com.github.bumptech.glide:glide:4.11.0'
 }
